syntax= "proto3";

package OrdersService;

option java_multiple_files=true;

message CreateOrderRequest {

    string restaurantID= 1;
    string consumerID= 2;

    repeated OrderedProduct orderedProducts= 3;

    Address deliveryAddress= 4;
    string deliveryDeadline= 5;
}

message CreateOrderResponse {
    string orderID= 1;
}

message OrderedProduct {

    string productID= 1;
    int32 quantity= 2;
}

message Address {

    string street= 1;
    string city= 2;
    string state= 3;
    string zip= 4;
}